# intro

./: Cargo.toml  logfile.yml
src/: channel.rs  event.rs  format.rs  level_color.rs  lib.rs
src/channel/: mod.rs  single_channel.rs
src/output/: file.rs  mod.rs  stdout.rs
src/output/roll/: mod.rs  time.rs
src/tests/: format_test.rs  mod.rs
