[package]
name = "intro"
version = "0.1.0"
authors = ["SamPeng <dev.sampeng@gmail.com>"]

[dependencies]
log = "0.3"
regex = "0.2.1"
bencher = "0.1.2"
env_logger = "0.3"
time = "0.1"
rand = "0.3"
futures = "0.1.9"
futures-cpupool = "0.1"

[dev-dependencies]


[[bench]]
name = "print"
harness = false
